# OOD-OOP-Comparison-in-Parallel

./: CMakeLists.txt  README.md
component_version/: CMakeLists.txt
component_version/src/: components.h  entity.h  entity_manager.h  main.cc  system.cc  systems.h  thread_pool.h
inheritance_version/: CMakeLists.txt
inheritance_version/src/: game.h  main.cc  objects.h  thread_pool.cc
src/: main.cc
